
      \item \code{Sweave()} has options to produce PNG and JPEG figures,
      and to use a custom function to open a graphics device (see
      \code{?RweaveLatex}).\cr
      (Based in part on the contribution of \PR{14418}.)

      The default for \code{Sweave()} is to produce only PDF figures
      (rather than both EPS and PDF).

      \item \code{factanal()} now returns the rotation matrix if a
      rotation such as \code{"promax"} is used, and hence factor
      correlations are displayed.  (Wish of \PR{12754}.)

      \item Environment variable \env{SWEAVE_OPTIONS} can be used to
      supply defaults for existing or new options to be applied after
      the Sweave driver setup has been run.

      \item The Sweave manual is now included as a vignette in the
      \pkg{utils} package.

      \item The \code{gctorture2()} function provides a more refined
      interface to the GC torture process.  Environment variables
      \env{R_GCTORTURE}, \env{R_GCTORTURE_WAIT}, and
      \env{R_GCTORTURE_INHIBIT_RELEASE} can also be used to control the
      GC torture process.

      \item \code{file.copy(from, to)} no longer regards it as an error
      to supply a zero-length \code{from}: it now simply does nothing.
      
      \item \code{rstandard.glm} gains a \code{type} argument for optional 
      standardized Pearson residuals
    }
  }

  \subsection{C-LEVEL FACILITIES}{
    \itemize{
      \item Because they use a C99 interface which a C++ compiler is not
      required to support, \code{Rvprintf} and \code{REvprintf} are only
      defined by \file{R_ext/Print.h} in C++ code if the macro
      \code{R_USE_C99_IN_CXX} is defined when it is included.

      \item \code{pythag} duplicated the C99 function \code{hypot}.  It
      is no longer provided, but is used as a substitute for \code{hypot}
      in the very unlikely event that the latter is not available.

      \item \code{R_inspect(obj)} and \code{R_inspect3(obj, deep, pvec)}